Optimizations
Signed-off-by: Juan Manuel Leflet Estrada <jleflete@redhat.com>